framec_tests/language_specific/python/v3_mir/positive/transition_inline_comment.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B()  # comment ok
            }
        }
}

