framec_tests/language_specific/python/v3_mir/negative/trailing_tokens.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B() extra
            }
        }
}

